force-app/main/default/objects/Stock_Item__c/Stock_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Item</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Stock Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>