force-app/main/default/objects/Stock_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>