force-app/main/default/objects/Stock_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Name of the Stock Item (eg. 18&quot; Paella Pan)</description>
    <inlineHelpText>Name of the Stock Item (eg. 18&quot; Paella Pan)</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>