force-app/main/default/objects/Stock_Item__c/fields/Item_Stock_is_Low__c.field-meta.xml
<CustomField>
    <fullName>Item_Stock_is_Low__c</fullName>
    <description>True if the stock on hand is less than or equal to the Minimum stock level OR if either of those fields is empty.</description>
    <formula>Stock_on_Hand__c &lt;=  Minimum_Stock_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the stock on hand is less than or equal to the Minimum stock level OR if either of those fields is empty.</inlineHelpText>
    <label>Item Stock is Low</label>
    <type>Checkbox</type>
</CustomField>