force-app/main/default/objects/Stock_Item__c/fields/Minimum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Level__c</fullName>
    <inlineHelpText>The minimum amount we should keep in stock for this item.  Reorder when this threshold is met.</inlineHelpText>
    <label>Minimum Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>