force-app/main/default/objects/Stock_Item__c/fields/Stock_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Stock_on_Hand__c</fullName>
    <label>Stock on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>