force-app/main/default/objects/Stock_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Item_Name__c</columns>
    <columns>List_Price__c</columns>
    <columns>Stock_on_Hand__c</columns>
    <columns>Minimum_Stock_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>